create a single model part instead